package it.dosti.justit.model;

public interface RepairReport {

    String getTechNotes();

}
