package it.dosti.justit.model.booking;

public enum BookingStatus {
    PENDING_PAYMENT,
    PENDING_CONFIRM,
    CONFIRMED,
    REJECTED,
    COMPLETED
}
